# Tree-Manager-Rust

./: .gitignore  README.md
Backend/: Cargo.toml
Backend/src/: db.rs  main.rs
Backend/src/controllers/: nodes.rs
Frontend/: package-lock.json  package.json
Frontend/src/pages/: index.tsx  styles.module.css
