[package]
name = "rust-template"
version = "0.1.0"
readme = "README.md"
edition = "2021"

[features]
default = []

[dependencies]
mysql = "24.0.0"
mysql_common = "*"
tokio = { version = "1.34.0", features = ["full"] }
warp ={ version = "0.3.6"}
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[profile.release]
lto = true
panic = "abort"
